# annotate_project

./: README.md  uinlp-prod.code-workspace
.github/workflows/: backend-sync.sh  backend.yml  deploy.yml  terraform-output.sh
backend/: Dockerfile  compose.local.yml  main.py  requirements.txt  template.yml
backend/src/repositories/: assets.py
docs/: README.md  api.md  architecture.md  getting-started.md  infrastructure.md  mobile-app.md  web-app.md
infra/: README.md
infra/environments/prod/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.-code-workspace
infra/modules/apis/: locals.tf  main.tf  outputs.tf  variables.tf
infra/modules/authentications/: main.tf  outputs.tf
infra/modules/databases/: locals.tf  main.tf  outputs.tf  variables.tf
infra/src/scripts/internal/: pyproject.toml
infra/src/scripts/internal/src/internal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/src/scripts/internal/src/internal/database/models/: assets.py  datasets.py  shared.py
infra/src/scripts/internal/src/internal/repositories/: assets.py  datasets.py
infra/src/scripts/internal/src/internal/utilities/: cognito.py  s3.py
infra/src/scripts/internal/tests/units/: test_assets_repository.py
mobile_app/: .gitignore  README.md  pubspec.yaml
mobile_app/ios/Runner/: Info.plist
mobile_app/lib/: amplify_outputs.dart  exceptions.dart  main.dart
mobile_app/linux/: CMakeLists.txt
mobile_app/test/: widget_test.dart
mobile_app/web/: index.html  manifest.json
mobile_app/windows/: CMakeLists.txt
web_app/: README.md  package-lock.json  package.json
(+76 files in other folders)
